# freshforge

./: .gitignore  AGENTS.md  CHANGE_LOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE_NOTES.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: adapter-discovery.rst  architecture.rst  conf.py  development-workflow.rst  examples.rst  execution.rst  governance.rst  index.rst  installation.rst  providers.rst  release-checklist.rst  roadmap.rst  run-matrices.rst  workflow-records.rst  workflow-runner.rst
examples/: ecosystem_adapter_workflow.yaml  matrix_workflow_template.yaml  run_matrix.yaml  stand_treatment_workflow.yaml
planning/: clews_c2020_workflow_use_cases.md  freshforge_bootstrap_rationale.md  phase1_cli_api_boundary.md  phase1_provider_boundary_contract.md  phase1_workflow_architecture.md  phase1_workflow_language_survey.md  phase3_provider_registry_first.md  phase4_entry_point_adapter_discovery.md
src/freshforge/: __init__.py  __main__.py  cli.py  execution.py  loading.py  matrix.py  planning.py  providers.py  records.py  validation.py
tests/: test_cli.py  test_docs.py  test_execution.py  test_loading_validation.py  test_matrix.py  test_package.py  test_planning.py  test_providers.py  test_records.py  test_release_contract.py
